0028907: Coding Rules, OpenGl_GraphicDriver - fix class fields accidentally marked public